--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "install": "^0.13.0",
+    "npm": "^6.10.3",
     "react": "16.8.6",
-    "react-native": "0.60.5"
+    "react-native": "0.60.5",
+    "react-native-camera": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
